# rust_screen

./: .gitignore  Cargo.toml  LICENSE  README.md  gstreamer-requirements.txt  installer.iss  sample_config.toml
.github/workflows/: rust-release.yml
src/: capture.rs  config.rs  main.rs  rtsp.rs  service.rs
